# kate

addons/: CMakeLists.txt
addons/jshint/: CMakeLists.txt  Messages.sh  katejshint.desktop  plugin.qrc  plugin_katejshint.cpp  plugin_katejshint.h  ui.rc
